# std-tech-dept-template

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
py-basic/: cookiecutter.json  custom-config.template.yaml
py-basic/hooks/: post_gen_project.py  pre_gen_project.py
py-basic/{{ cookiecutter.project_folder }}/: .pre-commit-config.yaml  pyproject.toml
py-basic/{{ cookiecutter.project_slug }}/: pyproject.toml
{{ cookiecutter.project.slug }}/: pyproject.toml
{{ cookiecutter.project_slug }}/: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
